# YearsAgo

./: CMakeLists.txt  InstallScript.qs  README.md
Graphics/: App.xcf  DummyImage.xcf  NoImageFound.xcf  SearchingFinished.xcf  SearchingStarted.xcf
Script/: Build.cmd  SetEnvMsvc.cmd
Src/: CMakeLists.txt  Cache.cpp  Cache.h  ImageGenerator.cpp  ImageGenerator.h  Model.cpp  Model.h  Res.qrc  ScopeTimer.h  SearchAlgorithm.cpp  SearchAlgorithm.h  SearchThread.cpp  SearchThread.h  View.cpp  View.h  View.ui  ViewModel.cpp  ViewModel.h  YearsAgo_de_DE.ts  main.cpp
Test/: CMakeLists.txt  CacheTest.cpp  CacheTest.h  ModelTest.cpp  ModelTest.h
